xmla client tests execute code review migrate private methods to util class Signed-off-by: dbulahov <bulahovdenis@gmail.com>